// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitAdminToolsTypeScript > emits explicit 204 no_content success branch 1`] = `
"// @generated by @teachable/admin-tools-codegen
// Teachable Admin API tools — native HTTP access is implemented only inside an injected client (fetch at the adapter edge).

import { createTool } from "@mastra/core/tools";
import { z } from "zod";

/**
 * Injectable admin HTTP port. Implementations should use native fetch, inject base URL,
 * and attach X-Consumer-Custom-ID — never hardcode those values in generated tools.
 */
export type TeachableAdminHttpClient = {
  adminRequest(init: {
    readonly method: string;
    readonly path: string;
    readonly query?: Readonly<Record<string, string | undefined>>;
    readonly headers?: Readonly<Record<string, string>>;
    readonly jsonBody?: unknown;
  }): Promise<{ readonly status: number; readonly json: unknown | null }>;
};

export type TeachableAdminToolsDeps = {
  readonly http: TeachableAdminHttpClient;
};


export function adminTool_PATCH_kong_api_v2_products_courses_course_id_compliance(deps: TeachableAdminToolsDeps) {
  return createTool({
    id: "PATCH_kong_api_v2_products_courses_course_id_compliance",
    description: "patch compliance\\n\\nPATCH /kong_api/v2/products/courses/{course_id}/compliance",
    inputSchema: z.object({
  course_id: z.coerce.number(),
}),
    outputSchema: z.union([z.object({ kind: z.literal("success"), status: z.literal(204), body: z.null(), content: z.literal("no_content") }), z.object({ kind: z.literal("error"), status: z.number(), body: z.unknown().optional() })]),
    execute: async (input) => {
    const { status, json } = await deps.http.adminRequest({
      method: "PATCH",
      path: \`/kong_api/v2/products/courses/\${encodeURIComponent(String(input.course_id))}/compliance\`,
    });
    if (status === 204) {
      return { kind: "success" as const, status: 204 as const, body: null, content: "no_content" as const };
    }
    return { kind: "error" as const, status, body: json };
    },
  });
}

export function makeAllTeachableAdminTools(deps: TeachableAdminToolsDeps) {
  return [
    adminTool_PATCH_kong_api_v2_products_courses_course_id_compliance(deps),
  ] as const;
}"
`;

exports[`emitAdminToolsTypeScript > emits one createTool per operation with stable id 1`] = `
"// @generated by @teachable/admin-tools-codegen
// Teachable Admin API tools — native HTTP access is implemented only inside an injected client (fetch at the adapter edge).

import { createTool } from "@mastra/core/tools";
import { z } from "zod";

/**
 * Injectable admin HTTP port. Implementations should use native fetch, inject base URL,
 * and attach X-Consumer-Custom-ID — never hardcode those values in generated tools.
 */
export type TeachableAdminHttpClient = {
  adminRequest(init: {
    readonly method: string;
    readonly path: string;
    readonly query?: Readonly<Record<string, string | undefined>>;
    readonly headers?: Readonly<Record<string, string>>;
    readonly jsonBody?: unknown;
  }): Promise<{ readonly status: number; readonly json: unknown | null }>;
};

export type TeachableAdminToolsDeps = {
  readonly http: TeachableAdminHttpClient;
};


export function adminTool_sampleGet(deps: TeachableAdminToolsDeps) {
  return createTool({
    id: "sampleGet",
    description: "read foo\\n\\nGET /kong_api/v2/foo/{id}",
    inputSchema: z.object({
  id: z.coerce.number(),
}),
    outputSchema: z.union([z.object({ kind: z.literal("success"), status: z.literal(200), body: z.unknown() }), z.object({ kind: z.literal("error"), status: z.number(), body: z.unknown().optional() })]),
    execute: async (input) => {
    const { status, json } = await deps.http.adminRequest({
      method: "GET",
      path: \`/kong_api/v2/foo/\${encodeURIComponent(String(input.id))}\`,
    });
    if (status === 200) {
      return { kind: "success" as const, status: 200 as const, body: json };
    }
    return { kind: "error" as const, status, body: json };
    },
  });
}

export function makeAllTeachableAdminTools(deps: TeachableAdminToolsDeps) {
  return [
    adminTool_sampleGet(deps),
  ] as const;
}"
`;
